--- a/src/components/Stories/Story/style.css
+++ b/src/components/Stories/Story/style.css
@@ -1,1 +1,18 @@
-.story {}
+.story {
+    margin: 30px 0;
+    border-bottom: 1px solid rgb(187, 187, 187);
+}
+
+.story:hover {
+    background-color: rgb(244, 244, 244);
+}
+
+.story span {
+    margin-right: 30px;
+    border-bottom: 1px solid rgb(187, 187, 187);
+}
+
+.story a {
+    color: inherit;
+    text-decoration: none;
+}
