--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,12 @@
-.app {}
+.app {
+    margin: 50px;
+}
+
+.app-container {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.app-content {
+    margin-top: 100px;
+}
