--- a/src/components/StoryPage/Comments/Comment/Child/style.css
+++ b/src/components/StoryPage/Comments/Comment/Child/style.css
@@ -1,5 +1,8 @@
+.child .ant-comment-content {
+    padding-left: 20px;
+    border-left: 1px solid rgb(214, 214, 214);
+}
+
 .child {
-    margin: 20px;
-    background-color: rgba(174, 0, 255, 0.088);
-    padding: 10px;
+    margin: 10px 0 40px 30px;
 }
