--- a/src/components/StoryPage/Comments/Comment/Child/style.css
+++ b/src/components/StoryPage/Comments/Comment/Child/style.css
@@ -1,8 +1,8 @@
-.child .ant-comment-content {
+.child-comment .ant-comment-content {
     padding-left: 20px;
     border-left: 1px solid rgb(214, 214, 214);
 }
 
-.child {
+.child-comment {
     margin: 10px 0 40px 30px;
 }
